--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <body>
     <div class="container">
         <h1>🌟Oii, gostaria de saber se assinando Disney+ eu tenho acesso a essa princesa🌟</h1>
-        <h3>2 reais ou um date misterioso?</h3>
+        <h3>2 reais ou um date misterioso com muitas risadas e histórias boas?</h3>
         <div class="buttons">
             <button id="sim">DATE MISTERIOSO SEM DÚVIDAS</button>
             <button id="nao">NÃÃÃÃÃÃÃÃO CARAI ME DÁ MEUS 2 REAL</button>
