--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>🌟Oii, gostaria de saber se assinando Disney+ eu tenho acesso a essa princesa🌟</h1>
-        <h3>2 reais ou um date misterioso com muitas risadas e histórias boas?</h3>
+        <h1>🫵Opa, vi que minhas histórias malucas chamaram sua atenção... tá pronta pra mais?🤔</h1>
+        <h2>🌟Mas olha, eu também tô curioso... Será que assinando o Disney+ eu ganho acesso a essa princesa?🌟</h2>
+        <h3>💵2 reais ou um date misterioso com muitas risadas e histórias boas?✨</h3>
         <div class="buttons">
             <button id="sim">DATE MISTERIOSO SEM DÚVIDAS</button>
             <button id="nao">NÃÃÃÃÃÃÃÃO CARAI ME DÁ MEUS 2 REAL</button>
