--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🫵Opa, vi que minhas histórias malucas chamaram sua atenção... tá pronta pra mais?🤔</h1>
+        <h1>🫵Opa Sarah né? Vi que minhas histórias malucas chamaram sua atenção... tá pronta pra mais?🤔</h1>
         <h2>🌟Mas olha, eu também tô curioso... Será que assinando o Disney+ eu ganho acesso a essa princesa?🌟</h2>
         <h3>💵2 reais ou um date misterioso com muitas risadas e histórias boas?✨</h3>
         <div class="buttons">
